# cpp_assn5_2022

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mybutton.cpp  mybutton.h  pan.cpp  pan.h  real-assn5.pro  timego.cpp  timego.h  문서2.txt
.github/workflows/: cmake-windows-build.yml  release.yml
