cmake_minimum_required(VERSION 3.16)

project(cpp_assn5_2022 VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
    main.cpp
    mainwindow.cpp
    mainwindow.h
    mainwindow.ui
    mybutton.cpp
    mybutton.h
    pan.cpp
    pan.h
    timego.cpp
    timego.h
)

if(QT_VERSION_MAJOR GREATER_EQUAL 6)
    qt_add_executable(cpp_assn5_2022
        MACOSX_BUNDLE
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
else()
    add_executable(cpp_assn5_2022 MACOSX_BUNDLE ${PROJECT_SOURCES})
endif()

target_link_libraries(cpp_assn5_2022 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(cpp_assn5_2022)
endif()
